# ludomango

./: .editorconfig  .gitignore  Cargo.toml  Makefile  README.md  askama.toml  package.json  pnpm-lock.yaml
.github/workflows/: rust.yml
src/app/: config.rs  main.rs  utils.rs
src/app/game/: mod.rs
src/app/view/: header.rs  index.rs  mod.rs
src/assets/: test.js
src/templates/: base.html  header.html  index.html
