[package]
name = "ludomango"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/app/main.rs"
name = "ludomango"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
lazy_static = "1.4.0"
actix-files = "0.6.6"
askama = { version = "0.12.1", features = ["with-actix-web"] }
askama_actix = "0.14.0"
minify-html = "0.15.0"
